namespacing issues; added first draft of communication layer

--- a/media/style.css
+++ b/media/style.css
@@ -5,7 +5,7 @@ font-family: sans-serif;
 font-size: 12px;
 }
 
-#toolbar {
+.toolbar {
 height: 22px;
 background-image: -webkit-gradient(
     linear,
@@ -22,7 +22,7 @@ background-image: -moz-linear-gradient(
 border-bottom: 1px solid #ccc;
 }
 
-#toolbar ul#tools {
+.toolbar ul#tools {
 list-style:none;
 padding:0;
 margin:0;
@@ -32,12 +32,12 @@ margin:0;
 margin: 0 5px;
 }
 
-#toolbar ul#tools li {
+.toolbar ul#tools li {
 float:left;
 line-height:2em;
 }
 
-#toolbar ul#tools li button {
+.toolbar ul#tools li button {
 border: 0;
 -moz-border-radius: 2px;
 -webkit-border-radius: 2px;
@@ -46,7 +46,7 @@ border-radius: 2px;
 min-width:30px;
 }
 
-#toolbar ul#tools li#status {
+.toolbar ul#tools li#status {
 position:absolute;
 right:0;
 min-width: 30px;
@@ -54,7 +54,7 @@ margin:0;
 padding:0;
 }
 
-#toolbar ul#tools li#status div {
+.toolbar ul#tools li#status div {
 width: 12px;
 height: 12px;
 -moz-border-radius: 6px;
@@ -62,30 +62,31 @@ height: 12px;
 margin-top: 5px;
 }
 
-#toolbar ul#tools li#status #online {
+.toolbar ul#tools li#status #online {
 display:none;
 background: -moz-radial-gradient(center 45deg, circle closest-corner, #00ff00 0%, #2F2727 100%);
 background: -webkit-gradient(radial, center center, 0, center center, 70, from(#00ff00), to(#2F2727));
 }
 
-#toolbar ul#tools li#status #offline {
+.toolbar ul#tools li#status #offline {
 background: -moz-radial-gradient(center 45deg, circle closest-corner, #ff0000 0%, #2F2727 100%);
 background: -webkit-gradient(radial, center center, 0, center center, 70, from(#ff0000), to(#2F2727));
 }
 
-#expand {
+#collexp {
 position:absolute;
-right:0;
-bottom:0;
+right: 0;
+bottom: 0;
+cursor:pointer;
 }
 
 #debug {
 margin:0;
 padding:0;
-display:none;
 width:100%;
-height:200px;
+height:202px;
 position:absolute;
+display:none;
 bottom: 0;
 }
 
@@ -95,8 +96,12 @@ border: 3px solid #ff0000;
 }
 
 #debug #output {
-width:99%;
-height: 200px;
+height: 160px;
 position:absolute;
+bottom: 0;
+right: 0;
+left: 0;
+border: 0;
+border-top: 1px solid #ccc;
 bottom: 0;
 }
